tests/fail/assert_fail.avm
push int8(0)
assert int16(0)
